chore: install and setup nativewind

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
       "package": "com.ambegossi.yieldly"
     },
     "web": {
+      "bundler": "metro",
       "output": "static",
       "favicon": "./src/assets/images/favicon.png"
     },
